Fix attack range